--- a/front.html
+++ b/front.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="fucntions.js" defer></script>
+    <script src="function.js" defer></script>
 
 </head>
 <body>
@@ -25,6 +25,10 @@
     </center>
     <center>
         <button class="button2">-</button>
+    </center>
+
+    <center>
+        
     </center>
     
 </body>
